fix openapi way to send
